--- a/public/admin/css/app.css
+++ b/public/admin/css/app.css
@@ -21,7 +21,21 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     z-index: 1000;
   }
-
+  .alert-edit-product {
+    padding: 15px;
+    border: 1px solid #666;
+    background: #fff;
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 1000;
+  }
 .alert-update-status {
     padding: 15px;
     border: 1px solid #666;
