--- a/views/layouts/headerfooter.ejs
+++ b/views/layouts/headerfooter.ejs
@@ -75,6 +75,7 @@
 				<script src="\js\wow.min.js"></script>
 				<script src="\js\scripts.js"></script>
 				<script src="switchstylesheet/switchstylesheet.js"></script>
+				<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
 				<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 				<script type="module" src="/js/app.js"></script>
@@ -89,6 +90,7 @@
 						});
 					});
 				</script>
+				<script src="\js\user_account_profile.js"> </script>
 </body>
 
 </html>
