--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
                   <li><a href="/admin/oveview/1"><i class="icon fa fa-check"></i>Admin</a></li>
                   <li><a href="/logout"><i class="icon fa fa-check"></i>Log out</a></li>
                   <% }else { %>
-                    <li><a href="/user/account/profile"></i>Hello, <%= user.name %></a></li>
+                    <li><a href="/user/account/profile" class="user_name">Hello, <%= user.name %></a></li>
                     <li><a href="/logout"><i class="icon fa fa-check"></i>Log out</a></li>
                     <li><a href="/customer/orders"><i class="icon fa fa-shopping-cart"></i>My order</a></li>
                     <li><a href="/shopping-cart"><i class="icon fa fa-shopping-cart"></i>My Cart</a></li>
