--- a/views/admin/layouts/header_footer.ejs
+++ b/views/admin/layouts/header_footer.ejs
@@ -45,7 +45,8 @@
           <script src="/admin/js/themes/lucent.js"></script>
           <script src="/admin/js/components/quick-search.js"></script> <!-- END: Vendor JS Assets-->
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-          
+          <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
 				<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
           <script type="module" src="/admin/js/admin.js"></script>
 
