--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -21,19 +21,19 @@
                     <li class="media">
                       <div class="pull-left"> <span class="icon fa-stack fa-lg"> <i class="fa fa-map-marker fa-stack-1x fa-inverse"></i> </span> </div>
                       <div class="media-body">
-                        <p>ThemesGround, 789 Main rd, Anytown, CA 12345 USA</p>
+                        <p>P. Vũ Trọng Khánh, P. Mộ Lao, Hà Đông, Hà Nội 100000, Việt Nam</p>
                       </div>
                     </li>
                     <li class="media">
                       <div class="pull-left"> <span class="icon fa-stack fa-lg"> <i class="fa fa-mobile fa-stack-1x fa-inverse"></i> </span> </div>
                       <div class="media-body">
-                        <p>+(888) 123-4567<br>
-                          +(888) 456-7890</p>
+                        <p>0398686399 (Mr.Dũng)<br>
+                          0764637526 (Mr.Hiển)</p>
                       </div>
                     </li>
                     <li class="media">
                       <div class="pull-left"> <span class="icon fa-stack fa-lg"> <i class="fa fa-envelope fa-stack-1x fa-inverse"></i> </span> </div>
-                      <div class="media-body"> <span><a href="#">flipmart@themesground.com</a></span> </div>
+                      <div class="media-body"> <span><a href="#">crazebikescompany@gmail.com</a></span> </div>
                     </li>
                   </ul>
                 </div>
