--- a/views/admin/admins.ejs
+++ b/views/admin/admins.ejs
@@ -1,5 +1,5 @@
 
-<form id="form-user"  method="post" onsubmit="return validateForm() ">
+<form id="form-admin"   onsubmit="return validateForm() ">
 
     <div class="mb-3 row">
         <label for="staticEmail" class="col-sm-2 col-form-label">Username</label>
@@ -26,6 +26,17 @@
                 <option value="M">Male</option>
                 <option value="F">Female</option>
                 <option value="O">Other</option>
+              </select>
+        </div>
+    </div>
+    <div class="mb-3 row">
+        <label for="staticEmail" class="col-sm-2 col-form-label">Role</label>
+        <div class="col-sm-10">
+            <select class="form-select form-select-lg mb-3" aria-label="Large select example" name="role_id">
+                <option value="1">All manager</option>
+                <option value="2">Products manager</option>
+                <option value="3">Users manager</option>
+                <option value="4">Orders manager</option>
               </select>
         </div>
     </div>
@@ -473,78 +484,90 @@
                                 <h2 class="mr-auto text-lg font-medium">Users</h2>
                                 <div class="mt-4 flex w-full flex-wrap gap-y-3 sm:mt-0 sm:w-auto">
                                     <button id="formButton" data-tw-merge="" class="transition duration-200 border inline-flex items-center justify-center py-2 px-3 rounded-md font-medium cursor-pointer focus:ring-4 focus:ring-primary focus:ring-opacity-20 focus-visible:outline-none dark:focus:ring-slate-700 dark:focus:ring-opacity-50 [&:hover:not(:disabled)]:bg-opacity-90 [&:hover:not(:disabled)]:border-opacity-90 [&:not(button)]:text-center disabled:opacity-70 disabled:cursor-not-allowed bg-primary border-primary text-white dark:border-primary mr-2 shadow-md">
-                                        Add new user</button>
+                                        Add new admin</button>
                                 </div>
                             </div>
                     
                             <!-- BEGIN: Data List -->
                             <div class="intro-y overflow-auto lg:overflow-visible">
                                 <table data-tw-merge="" class="w-full text-left border-separate border-spacing-y-[10px]">
-                                        <thead>
-                                            <tr>
-                                                <th class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                    ID
-                                                </th>
-                                                <th class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                    User name
-                                                </th>
-                                                <th class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                    Address
-                                                </th>
-                        
-                                                <th class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                   Gender
-                                                </th> 
-                                                 <th class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                    status
-                                                </th>
-                                            </tr>
-                                        </thead>
-                                    <tbody>
-                                        <% users.forEach(user => {  %>
-                                        <tr data-tw-merge="" class="intro-x">
+                                    <thead>
+                                        <tr>
                                             <td data-tw-merge="" class="px-5 py-3 w-40 border border-l-0 border-r-0 border-slate-200 bg-white !py-8 text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                <a class="whitespace-nowrap underline decoration-dotted" href="#"><%= user.id %></a>
+                                                Id
+                                            </th>
+                                            <td data-tw-merge="" class="px-5 py-3 w-40 border border-l-0 border-r-0 border-slate-200 bg-white !py-8 text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
+                                                User name
+                                            </th>
+                                            <td data-tw-merge="" class="px-5 py-3 w-40 border border-l-0 border-r-0 border-slate-200 bg-white !py-8 text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
+                                                Name
+                                            </th>
+                                            <td data-tw-merge="" class="px-5 py-3 w-40 border border-l-0 border-r-0 border-slate-200 bg-white !py-8 text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
+                                                Phone number
+                                            </th>
+                                            <td data-tw-merge="" class="px-5 py-3 w-40 border border-l-0 border-r-0 border-slate-200 bg-white !py-8 text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
+                                                Role
+                                            </th>
+                                            <td data-tw-merge="" class="px-5 py-3 w-40 border border-l-0 border-r-0 border-slate-200 bg-white !py-8 text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
+                                                Status
+                                            </th>             
+                                            <td data-tw-merge="" class="px-5 py-3 w-40 border border-l-0 border-r-0 border-slate-200 bg-white !py-8 text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
+                                                address
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                     <% if(locals.admins){admins.forEach(admin =>  { %>
+                    
+                               
+                                        <tr data-tw-merge="" class="intro-x">
+                                            <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
+                                                <%= admin.id %>
                                             </td>
                                             <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                <div class="whitespace-nowrap font-medium"><%= user.name%></div>
-                                                <div class="mt-1 text-xs text-slate-500"><%=user.phone_number%></div>
+                                                <%= admin.username %>
                                             </td>
-                                          
                                             <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                <div class="whitespace-nowrap"><%=user.address%></div>
-                                                <div class="mt-1 text-xs text-slate-500">Created at <%= moment(user.created_at).format('DD/MM/YYYY') %></div>
-                                                
-                                            </td> 
-                                            <% if (user.gender == "F") { %>
+                                                <%= admin.name %>
+                                            </td>
                                             <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                <div class="pr-16">   Female </div>
-                                            </td> 
-                                           <% }else if(user.gender == "M"){ %>
+                                                <%= admin.phone_number %>
+                                            </td>
                                             <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                <div class="pr-16">   Male </div>
-                                            </td> 
-                                          <%  }else{ %>
-                                            <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                                <div class="pr-16">   Male </div>
-                                            </td> 
-                                          <%}%>
-                                            <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
-                                             
                                                 <form >
                                                     <!-- action="/admin/order/status" method="post" -->
-                                                    <input type="hidden" name="orderId" value="<% user.id %>">
+                                                    <input type="hidden" value="<% admin.id %>">
                                                     <!-- onchange="this.form.submit()" -->
-                                                    <select name="plan" class="status-select"  data-users="<%= user.id %>"   > 
-                                                    <option value="0" <%= user.status_id === 0 ? 'selected' : '' %>> Locked  </option> 
-                                                    <option value="1" <%= user.status_id === 1 ? 'selected' : '' %>> Active </option> 
+                                                    <select  class="user-role-select"  data-admin-id="<%= admin.id %>"   > 
+                                                    <option value="1" <%= admin.role_id === 1 ? 'selected' : '' %>> All manager  </option> 
+                                                    <option value="2" <%= admin.role_id === 2 ? 'selected' : '' %>> Products manager  </option>
+                                                    <option value="3" <%= admin.role_id === 3 ? 'selected' : '' %>> Users manager   </option> 
+                                                    <option value="4" <%= admin.role_id === 4 ? 'selected' : '' %>> Orders manager     </option> 
+                                                </select></form>
+
+                                            </td>
+                                            <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
+                                            
+                                                <form >
+                                                    <!-- action="/admin/order/status" method="post" -->
+                                                    <input type="hidden" value="<% admin.id %>">
+                                                    <!-- onchange="this.form.submit()" -->
+                                                    <select name="plan" class="user-status-select"  data-user-id="<%= admin.id %>"   > 
+                                                    <option value="0" <%= admin.status_id === 0 ? 'selected' : '' %>> Locked  </option> 
+                                                    <option value="1" <%= admin.status_id === 1 ? 'selected' : '' %>> Active </option> 
                                         
                                                 </select></form>
                                             </td>
-                                           
-                                         
+                                          
+                                            <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
+                                                <%= admin.address %>
+                                            </td>
+                                            <td data-tw-merge="" class="px-5 py-3 border border-l-0 border-r-0 border-slate-200 bg-white text-center shadow-[20px_3px_20px_#0000000b] first:rounded-l-[0.6rem] first:border-l last:rounded-r-[0.6rem] last:border-r dark:border-darkmode-600 dark:bg-darkmode-600">
+                                                <button>edit</button>
+                                            </td>
+                                          
                                         </tr>
-                                        <%  }); %>
+                                           <% });} %>
                                     </tbody>
                                 </table>
                             </div>
