--- a/views/layouts/headerfooter.ejs
+++ b/views/layouts/headerfooter.ejs
@@ -92,6 +92,8 @@
 				</script>
 				<script src="\js\user_account_profile.js"> </script>
 				<script src="\js\checkLoginSignup.js"> </script>
+				<script src="\js\forgot_password.js"> </script>
+
 
 </body>
 
