--- a/views/user_account.ejs
+++ b/views/user_account.ejs
@@ -63,6 +63,10 @@
 					<td class="cart-product-sub-total"><span class="cart-product-description" style="text-transform: lowercase;"> <%= user.username %> </span></td>
 				</tr>
 				<tr>
+					<td class="cart-product-sub-total " ><span class="cart-sub-total-price"> Email: </span></td>
+					<td class="cart-product-sub-total"><span class="cart-product-description" style="text-transform: lowercase;"> <%= user.email %> </span></td>
+				</tr>
+				<tr>
 					<td class="cart-product-sub-total"><span class="cart-sub-total-price" > Name: </span></td>
 					<td class="cart-product-sub-total"><span class="cart-sub-total-price"> <input type="text" name="name" value="<%= user.name %>" required>   </span></td>
 				</tr>
