--- a/views/login.ejs
+++ b/views/login.ejs
@@ -65,6 +65,10 @@
 			<input type="text" class="form-control unicase-form-control text-input" id="exampleInputEmail2" name="usernameSignUp" required>
 		</div>
 		<div class="form-group">
+			<label class="info-title" for="exampleInputEmail2" >Email <span>*</span></label>
+			<input type="email" class="form-control unicase-form-control text-input" id="exampleInputEmail2" name="email" required>
+		</div>
+		<div class="form-group">
 			<label class="info-title" for="exampleInputEmail1">Name <span>*</span></label>
 			<input type="text" class="form-control unicase-form-control text-input" id="exampleInputName" name="name" value="<%= messages.name  %>" required>
 		</div>
