--- a/views/admin/order_detail.ejs
+++ b/views/admin/order_detail.ejs
@@ -1,7 +1,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 <body>
-   
+
     <div class="lucent before:content-[''] before:z-[-1] before:h-screen before:w-screen before:bg-lucent before:bg-cover before:top-0 before:fixed after:content-[''] after:z-[-1] after:h-screen after:w-screen after:bg-gradient-to-b after:from-theme-1 after:to-theme-2/50 after:top-0 after:fixed">
         <div class="h-screen relative loading-page loading-page--before-hide [&.loading-page--before-hide]:before:block [&.loading-page--hide]:before:opacity-0 before:content-[''] before:transition-opacity before:duration-300 before:hidden before:h-screen before:w-screen before:fixed before:bg-gradient-to-b before:from-theme-1 before:to-theme-2 before:z-[60] [&.loading-page--before-hide]:after:block [&.loading-page--hide]:after:opacity-0 after:content-[''] after:transition-opacity after:duration-300 after:hidden after:h-16 after:w-16 after:animate-pulse after:fixed after:opacity-50 after:inset-0 after:m-auto after:bg-loading-puff after:bg-cover after:z-[61]">
             <div class="absolute inset-0 xl:inset-5 flex after:absolute after:inset-0 after:rounded-xl after:bg-gradient-to-b after:from-white/10 after:to-white/20 after:backdrop-blur-xl after:content-['']">
@@ -10,20 +10,23 @@
                     <div class="scrollable-ref z-20 h-full w-full overflow-y-auto px-5 pb-5 pt-[90px] [&_.simplebar-content]:p-0 [&_.simplebar-track.simplebar-vertical]:w-[10px] [&_.simplebar-track.simplebar-vertical]:mr-0.5 [&_.simplebar-track.simplebar-vertical_.simplebar-scrollbar]:before:bg-slate-600/30">
 
                                 <p style="font-size: 50px;">                                       <a type="button" class="btn btn-primary active" data-bs-toggle="button" aria-pressed="true" href="/admin/feedbacks">Back </a>
-                                  Title: <%=id%> -   <form >
-                                    <!-- action="/admin/order/status" method="post" -->
-                                    <input type="hidden" name="orderId" value="<% id %>">
-                                    <!-- onchange="this.form.submit()" -->
-                                    <select name="plan" class="status-select" data-carts="<%= id %>" > 
-                                    <option value="3" <%= status === 3 ? 'selected' : '' %>> wait for confirmation  </option> 
-                                    <option value="4" <%= status === 4 ? 'selected' : '' %>>Confirm pending delivery </option> 
-                                    <option value="5" <%= status === 5 ? 'selected' : '' %>>Delivering </option> 
-                                    <option value="6" <%= status === 6 ? 'selected' : '' %>>Delivered successfully</option> 
-                                    <option value="7" <%=status === 7 ? 'selected' : '' %>>Wait for refund</option> 
-                                    <option value="8" <%= status === 8 ? 'selected' : '' %>>Refunded</option> 
-                                    <option value="9" <%= status === 9 ? 'selected' : '' %>>cancelled</option> 
-                                </select></form> </p> 
-                                <br>
+                                  ID: <%=id%>   
+                                  <div class="col-md-3">
+                                    <form >
+                                    <label for="validationCustom04" class="form-label">Status</label>
+                                    <input type="hidden" name="orderId" value="<%= id %>">
+                                    <select name="plan" class="status-select form-select" id="validationCustom04" data-carts="<%= id %>" >
+                                      <option value="3" <%= status === 3 ? 'selected' : '' %>> wait for confirmation  </option> 
+                                      <option value="4" <%= status === 4 ? 'selected' : '' %>>Confirm pending delivery </option> 
+                                      <option value="5" <%= status === 5 ? 'selected' : '' %>>Delivering </option> 
+                                      <option value="6" <%= status === 6 ? 'selected' : '' %>>Delivered successfully</option> 
+                                      <option value="7" <%=status === 7 ? 'selected' : '' %>>Wait for refund</option> 
+                                      <option value="8" <%= status === 8 ? 'selected' : '' %>>Refunded</option> 
+                                      <option value="9" <%= status === 9 ? 'selected' : '' %>>cancelled</option> 
+                                    </select>
+                                   </form>
+                                  </div> </p> 
+                           
                                 <hr>
                                 <br>
                                 <h2>Cart Information</h2>
@@ -66,67 +69,44 @@
                                   <hr>
                                   <form class="row g-3 needs-validation" novalidate>
                                     <div class="col-md-4">
-                                      <label for="validationCustom01" class="form-label">First name</label>
-                                      <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-                                      <div class="valid-feedback">
-                                        Looks good!
-                                      </div>
+                                      <label for="validationCustom01" class="form-label">Fullname</label>
+                                      <p type="text" class="form-control" id="validationCustom01" > <%= user.name %> </p> 
+                                    
                                     </div>
                                     <div class="col-md-4">
-                                      <label for="validationCustom02" class="form-label">Last name</label>
-                                      <input type="text" class="form-control" id="validationCustom02" value="Otto" required>
-                                      <div class="valid-feedback">
-                                        Looks good!
-                                      </div>
+                                      <label for="validationCustom02" class="form-label">Phone number</label>
+                                      <p type="text" class="form-control" id="validationCustom01" ><%= user.phone_number%> </p> 
+                                     
                                     </div>
                                     <div class="col-md-4">
-                                      <label for="validationCustomUsername" class="form-label">Username</label>
+                                      <label for="validationCustomUsername" class="form-label">Email</label>
                                       <div class="input-group has-validation">
-                                        <span class="input-group-text" id="inputGroupPrepend">@</span>
-                                        <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
-                                        <div class="invalid-feedback">
-                                          Please choose a username.
-                                        </div>
+                                        <% if(!user.email){ %>
+                                        <p type="text" class="form-control" id="validationCustom01" >No email to show </p> 
+                                    <%}else{  %>
+                                      <p type="text" class="form-control" id="validationCustom01" ><%= user.email %> </p> 
+
+                                    <% } %>
                                       </div>
                                     </div>
                                     <div class="col-md-6">
-                                      <label for="validationCustom03" class="form-label">City</label>
-                                      <input type="text" class="form-control" id="validationCustom03" required>
-                                      <div class="invalid-feedback">
-                                        Please provide a valid city.
-                                      </div>
+                                      <label for="validationCustom03" class="form-label">Address</label>
+                                      <p type="text" class="form-control" id="validationCustom03">  <%= user.address %></p>
+                                    
                                     </div>
+                                    
                                     <div class="col-md-3">
-                                      <label for="validationCustom04" class="form-label">State</label>
-                                      <select class="form-select" id="validationCustom04" required>
-                                        <option selected disabled value="">Choose...</option>
-                                        <option>...</option>
-                                      </select>
-                                      <div class="invalid-feedback">
-                                        Please select a valid state.
-                                      </div>
+                                      <label for="validationCustom05" class="form-label">Birth date</label>
+                                      <p type="text" class="form-control" id="validationCustom01" > <%= moment(user.birth_date).format('DD/MM/YYYY') %> </p> 
+                                      
                                     </div>
+                                 
                                     <div class="col-md-3">
-                                      <label for="validationCustom05" class="form-label">Zip</label>
-                                      <input type="text" class="form-control" id="validationCustom05" required>
-                                      <div class="invalid-feedback">
-                                        Please provide a valid zip.
-                                      </div>
+                                      <label for="validationCustom05" class="form-label">Gender</label>
+                                      <p type="text" class="form-control" id="validationCustom01" ><%= user.gender %> </p> 
+                                     
                                     </div>
-                                    <div class="col-12">
-                                      <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
-                                        <label class="form-check-label" for="invalidCheck">
-                                          Agree to terms and conditions
-                                        </label>
-                                        <div class="invalid-feedback">
-                                          You must agree before submitting.
-                                        </div>
-                                      </div>
-                                    </div>
-                                    <div class="col-12">
-                                      <button class="btn btn-primary" type="submit">Submit form</button>
-                                    </div>
+                                  
                                   </form>
                     </div>
                 </div>
