--- a/views/admin/layouts/header_footer.ejs
+++ b/views/admin/layouts/header_footer.ejs
@@ -73,6 +73,7 @@
           <script type="module" src="/admin/js/admin.js"></script>
           <script type="module" src="/admin/js/addUser.js"></script>
           <script type="module" src="/admin/js/addAdmin.js"></script>
+          <script type="module" src="/admin/js/addProductCategory.js"></script>
 
       <!-- Mirrored from rocketman-html.vercel.app/lucent-products.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 10 Mar 2024 03:29:52 GMT -->
       </html>
