--- a/public/admin/css/app.css
+++ b/public/admin/css/app.css
@@ -5990,7 +5990,25 @@ select {
       border-radius: 5px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
       z-index: 1000;
-    }  
+    } 
+    #form-product-category{
+        padding: 15px;
+        border: 1px solid #666;
+        background: #fff;
+         display: none;
+      }
+      /* CSS cho add admin */
+      #form-product-category {
+          position: fixed;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          background-color: #fff;
+          padding: 20px;
+          border-radius: 5px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+          z-index: 1000;
+        }  
   .overlay {
     position: fixed;
     top: 0;
