--- a/public/admin/css/app.css
+++ b/public/admin/css/app.css
@@ -6009,6 +6009,24 @@ select {
           box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
           z-index: 1000;
         }  
+        #form-product-subcategory{
+            padding: 15px;
+            border: 1px solid #666;
+            background: #fff;
+             display: none;
+          }
+          /* CSS cho add admin */
+          #form-product-subcategory {
+              position: fixed;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              background-color: #fff;
+              padding: 20px;
+              border-radius: 5px;
+              box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+              z-index: 1000;
+            } 
   .overlay {
     position: fixed;
     top: 0;
