--- a/views/admin/product_categories.ejs
+++ b/views/admin/product_categories.ejs
@@ -1,4 +1,4 @@
-<form id="form-product-category"  method="post" onsubmit="return validateForm() ">
+<form id="form-product-category" >
     <div class="col-sm-10" style="display: none;">
         <input type="text"  class="form-control" id="staticEmail" name="createdBy" value="<%= user.name %>">
     </div>
