--- a/views/admin/product_subcategories.ejs
+++ b/views/admin/product_subcategories.ejs
@@ -1,3 +1,24 @@
+<form id="form-product-subcategory" >
+    <div class="col-sm-10" style="display: none;">
+        <input type="text"  class="form-control" id="staticEmail" name="createdBy" value="<%= user.name %>">
+    </div>
+    <div class="mb-3 row">
+        <label  class="col-sm-2 col-form-label">Subategory Name</label>
+        <div class="col-sm-10">
+            <input type="text"  class="form-control" id="staticEmail" name="productSubcategoryName" required>
+        </div>
+    </div>
+    <label  class="col-sm-2 col-form-label">Category</label>
+    <div class="col-sm-10">
+        <select class="form-select form-select-lg mb-3" aria-label="Large select example" name="categoryId">
+            <% categories.forEach(category=> { %>
+            <option value="<%= category.id%>"><%= category.name %></option>
+            <% }) %>
+          </select>
+    </div>
+    <input class="btn btn-primary" type="submit" value="Submit">
+</form>
+<div class="overlay" style="display: none;"></div>
 
 <body>
     <div>
@@ -418,8 +439,11 @@
                     <div class="scrollable-ref z-20 h-full w-full overflow-y-auto px-5 pb-5 pt-[90px] [&_.simplebar-content]:p-0 [&_.simplebar-track.simplebar-vertical]:w-[10px] [&_.simplebar-track.simplebar-vertical]:mr-0.5 [&_.simplebar-track.simplebar-vertical_.simplebar-scrollbar]:before:bg-slate-600/30">
                         <div class="relative z-20">
                             <div class="intro-y mt-8 flex flex-col items-center sm:flex-row">
-                                <h2 class="mr-auto text-lg font-medium">Users</h2>
-                           
+                                <h2 class="mr-auto text-lg font-medium">Product Subcategory</h2>
+                                <div class="mt-4 flex w-full flex-wrap gap-y-3 sm:mt-0 sm:w-auto">
+                                    <button id="formButton" data-tw-merge="" class="transition duration-200 border inline-flex items-center justify-center py-2 px-3 rounded-md font-medium cursor-pointer focus:ring-4 focus:ring-primary focus:ring-opacity-20 focus-visible:outline-none dark:focus:ring-slate-700 dark:focus:ring-opacity-50 [&:hover:not(:disabled)]:bg-opacity-90 [&:hover:not(:disabled)]:border-opacity-90 [&:not(button)]:text-center disabled:opacity-70 disabled:cursor-not-allowed bg-primary border-primary text-white dark:border-primary mr-2 shadow-md">
+                                        Add new subcategory</button>
+                                </div>
                             </div>
                     
                             <!-- BEGIN: Data List -->
