--- a/views/admin/product_subcategories.ejs
+++ b/views/admin/product_subcategories.ejs
@@ -1,4 +1,4 @@
-<form id="form-product-subcategory" >
+<form  class="addForm" id="form-product-subcategory" >
     <div class="col-sm-10" style="display: none;">
         <input type="text"  class="form-control" id="staticEmail" name="createdBy" value="<%= user.name %>">
     </div>
@@ -15,6 +15,7 @@
             <option value="<%= category.id%>"><%= category.name %></option>
             <% }) %>
           </select>
+          
     </div>
     <input class="btn btn-primary" type="submit" value="Submit">
 </form>
